# ml-robot-advisor

./: .env.example  .gitignore  Dockerfile  FICHIERS_IMPORTANTS.md  INSTALLATION.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_FINAL.md  TECHNOLOGIES.md  docker-compose.yml  project_tree.txt  pyproject.toml  pytest.ini  requirements.txt  run_api.sh  setup.py
config/: logging_config.py  settings.py
docker/: Dockerfile
docs/: ARCHITECTURE.md  PORTS_AND_ADAPTERS.md  QUICKSTART.md  architecture.md
mlops/airflow/dags/: daily_training_dag.py  drift_monitoring_dag.py  retraining_dag.py
mlops/deployment/: deploy_model.py  model_versioning.py  rollback_model.py
mlops/monitoring/: check_data_quality.py  check_drift.py  check_performance.py  drift_detector.py  generate_reports.py
mlops/retraining/: auto_retrain_pipeline.py  retrain_trigger.py
mlops/training/: train_all_models.py  train_return_predictor.py  train_volatility_model.py
notebooks/: ml-robot.py  portfolio_optimization_demo.ipynb
notebooks/.ipynb_checkpoints/: portfolio_optimization_demo-checkpoint.ipynb
scripts/: demo_complete.py
src/application/use_cases/: optimize_portfolio.py  train_ml_model.py
src/domain/entities/: __init__.py  asset.py  portfolio.py  position.py
src/domain/ports/ml/: ml_services_interface.py
src/domain/ports/repositories/: portfolio_repository_interface.py
src/domain/ports/services/: external_services_interface.py
src/domain/value_objects/: returns.py  risk_metrics.py  weights.py
src/infrastructure/data/: loader.py  mongodb_repository.py  repository.py
src/infrastructure/data_sources/: market_data.py
src/infrastructure/etl/extractors/: market_data_extractor.py
src/infrastructure/ml/evaluation/: financial_metrics.py  regression_metrics.py
src/infrastructure/ml/models/: anomaly_detector.py  base_model.py  model_factory.py  random_forest.py  return_predictor.py  volatility_predictor.py
src/infrastructure/ml/monitoring/: data_quality_checker.py  model_performance_tracker.py
src/infrastructure/ml/preprocessing/: feature_engineer.py
src/infrastructure/ml/training/: cross_validator.py  hyperparameter_tuner.py  trainer.py
src/infrastructure/optimization/: README.md  __init__.py  base_solver.py  cvxpy_solver.py  gurobi_optimizer.py  highs_solver.py  portfolio_optimizer.py  solver_factory.py
src/infrastructure/persistence/mongodb/: portfolio_repository.py
src/infrastructure/risk_management/: risk_calculator.py  var_calculator.py
src/mlops/: mlflow_tracker.py
src/mlops/monitoring/: drift_monitor.py
src/presentation/api/: main.py
tests/unit/: test_domain_entities.py
tests/unit/domain/: test_entities.py
(+5 files in other folders)
